[gd_scene load_steps=13 format=3 uid="uid://c7xbusdsm4w70"]

[ext_resource type="Script" path="res://Enemy/Minotaur.gd" id="1_e0sxd"]
[ext_resource type="PackedScene" uid="uid://ckxtubrao5dan" path="res://Assets/BlenderObjs/minotaurosasaasasdass.tscn" id="2_5vxtl"]
[ext_resource type="Script" path="res://Scripts/StateMachine/MinotaurStateMachine.gd" id="5_ak1ho"]
[ext_resource type="Script" path="res://Enemy/MinotaurStateScripts/WalkingMinotaurState.gd" id="6_b4c5l"]
[ext_resource type="Script" path="res://Enemy/MinotaurStateScripts/AttackMinotaurState.gd" id="6_pkwj3"]
[ext_resource type="Script" path="res://Enemy/MinotaurStateScripts/IdleMinotaurState.gd" id="8_2t2xe"]
[ext_resource type="Script" path="res://Enemy/MinotaurStateScripts/DeathMinotaurState.gd" id="9_j2fka"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jeeme"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3d1rm"]
size = Vector3(1, 2.44153, 4.3599)

[sub_resource type="SphereShape3D" id="SphereShape3D_sk6bu"]
radius = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_re50c"]
radius = 1.99

[sub_resource type="SphereShape3D" id="SphereShape3D_onysb"]
radius = 2.8535

[node name="Minotaur" type="CharacterBody3D" groups=["Enemy", "Minotaur"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.103685, 0)
collision_layer = 4
collision_mask = 35
script = ExtResource("1_e0sxd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.19791, 0, 0, 0, 1.19791, 0, 0, 0, 1.19791, 0, 1.2, 0)
shape = SubResource("CapsuleShape3D_jeeme")

[node name="Minotaurosasaasasdass" parent="CollisionShape3D" instance=ExtResource("2_5vxtl")]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 0, -0.760268, 0)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="MinotaurStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_ak1ho")
CURRENT_STATE = NodePath("IdleMinotaurState")

[node name="AttackMinotaurState" type="Node" parent="MinotaurStateMachine"]
script = ExtResource("6_pkwj3")

[node name="WalkingMinotaurState" type="Node" parent="MinotaurStateMachine"]
script = ExtResource("6_b4c5l")

[node name="IdleMinotaurState" type="Node" parent="MinotaurStateMachine"]
script = ExtResource("8_2t2xe")

[node name="DeathMinotaurState" type="Node" parent="MinotaurStateMachine"]
script = ExtResource("9_j2fka")

[node name="DamageHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
collision_layer = 64
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0355835, -0.191051)
shape = SubResource("BoxShape3D_3d1rm")

[node name="WalkingHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="WalkingHitbox"]
shape = SubResource("SphereShape3D_sk6bu")

[node name="PlayerBlockingHitbox" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 16
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBlockingHitbox"]
shape = SubResource("SphereShape3D_re50c")

[node name="OuterRangeHitbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="OuterRangeHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.907877, 0)
shape = SubResource("SphereShape3D_onysb")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IndicatorTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[connection signal="area_entered" from="DamageHitbox" to="." method="_on_damage_hitbox_area_entered"]
[connection signal="body_entered" from="WalkingHitbox" to="." method="_on_walking_hitbox_body_entered"]
[connection signal="body_exited" from="WalkingHitbox" to="." method="_on_walking_hitbox_body_exited"]
[connection signal="body_entered" from="OuterRangeHitbox" to="." method="_on_outer_range_hitbox_body_entered"]
[connection signal="body_exited" from="OuterRangeHitbox" to="." method="_on_outer_range_hitbox_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="IndicatorTimer" to="MinotaurStateMachine/AttackMinotaurState" method="_on_indicator_timer_timeout"]
